--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -13,6 +13,7 @@
 {% block navigation_title %}{{ route_entity.name }}{% endblock %}
 
 {% block navigation_buttons %}
+{% include 'button/bookmark.html.twig' %}
 {% include 'button/angle.html.twig' %}
 {% include 'button/bulb.html.twig' %}
 {% include 'button/mirror.html.twig' %}
