--- a/templates/button/filter.html.twig
+++ b/templates/button/filter.html.twig
@@ -13,12 +13,13 @@
                 this.name = '';
                 this.minGrade = "{{ grades[0].value }}";
                 this.maxGrade = "{{ grades[grades|length-1].value }}";
-                this.sortBy = 'newest';
                 this.exclUngraded = false;
                 this.minRating = 1;
                 this.maxRating = 5;
                 this.exclUnrated = false;
                 this.userSent = '';
+                this.bookmarked = '';
+                this.sortBy = 'newest';
                 this.dispatch();
             },
             dispatch() {
@@ -27,12 +28,13 @@
                         name: this.name,
                         minGrade: this.minGrade,
                         maxGrade: this.maxGrade,
-                        sortBy: this.sortBy,
                         exclUngraded: this.exclUngraded,
                         minRating: this.minRating,
                         maxRating: this.maxRating,
                         exclUnrated: this.exclUnrated,
-                        userSent: this.userSent
+                        userSent: this.userSent,
+                        bookmarked: this.bookmarked,
+                        sortBy: this.sortBy,
                     }
                 );
             },
@@ -43,7 +45,8 @@
             minRating: Alpine.$persist(1),
             maxRating: Alpine.$persist(5),
             exclUnrated: Alpine.$persist(false),
-            userSent: Alpine.$persist(""),
+            userSent: Alpine.$persist("all"),
+            bookmarked: Alpine.$persist("all"),
             sortBy: Alpine.$persist("newest")
         }
     }
@@ -184,6 +187,20 @@
                                                     <option :selected="userSent == 'sentboth'" value="sentboth">Sent Both</option>
                                                     <option :selected="userSent == 'onlyone'" value="onlyone">Only one</option>
                                                 {% endif %}
+                                            </select>
+                                            <svg class="pointer-events-none col-start-1 row-start-1 mr-2 size-5 self-center justify-self-end text-gray-500 sm:size-4 dark:text-gray-400" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true" data-slot="icon">
+                                                <path fill-rule="evenodd" d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    <div class="sm:col-span-3">
+                                        <label for="bookmarked" class="block text-sm/6 font-medium text-gray-900 dark:text-white">Bookmark</label>
+                                        <div class="mt-2 grid grid-cols-1">
+                                            <select id="bookmarked" name="bookmarked" @change="changeValue('bookmarked', $event.target.value)" class="col-start-1 row-start-1 w-full appearance-none rounded-md bg-white py-1.5 pr-8 pl-3 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 focus:outline-2 focus:-outline-offset-2 focus:outline-emerald-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:*:bg-gray-800 dark:focus:outline-emerald-500">
+                                                {% set showOptions = [{'label': 'All', 'value': 'all'}, {'label': 'Only Bookmarks', 'value': 'bookmark'}, {'label': 'No Bookmarks', 'value': 'nobookmark'}] %}
+                                                {% for option in showOptions %}
+                                                    <option :selected="bookmarked == '{{ option.value }}'" value="{{ option.value }}">{{ option.label }}</option>
+                                                {% endfor %}
                                             </select>
                                             <svg class="pointer-events-none col-start-1 row-start-1 mr-2 size-5 self-center justify-self-end text-gray-500 sm:size-4 dark:text-gray-400" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true" data-slot="icon">
                                                 <path fill-rule="evenodd" d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
