--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -39,6 +39,7 @@
             observeAngle(event) {
                 this.angle = event.detail;
             },
+            grades: {{ grades|json_encode|raw }},
             accRatings: {{ acc_ratings|json_encode|raw }},
             accGrades: {{ acc_grades|json_encode|raw }},
             logCounts: {{ log_counts|json_encode|raw }},
@@ -93,7 +94,7 @@
         </div>
         <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0" x-show="accGrades.hasOwnProperty(angle)">
             <dt class="text-sm/6 font-medium text-gray-900 dark:text-gray-100">Grade</dt>
-            <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0 dark:text-gray-400" x-text="accGrades[angle]"></dd>
+            <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0 dark:text-gray-400" x-text="grades[Math.round(accGrades[angle])]"></dd>
         </div>
         <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0" x-show="accRatings.hasOwnProperty(angle)">
             <dt class="text-sm/6 font-medium text-gray-900 dark:text-gray-100">Rating</dt>
