compare decimal ratings

--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -100,7 +100,7 @@
             <dt class="text-sm/6 font-medium text-gray-900 dark:text-gray-100">Rating</dt>
             <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0 dark:text-gray-400 flex items-center">
                 <template x-for="i in 5">
-                    <span :class="{'text-yellow-400': accRatings[angle] >= i ,'text-gray-500 dark:text-gray-400': accRatings[angle] < i}">
+                    <span :class="{'text-yellow-400': Math.round(accRatings[angle]) >= i ,'text-gray-500 dark:text-gray-400': Math.round(accRatings[angle]) < i}">
                         <svg viewBox="0 0 16 16" fill="currentColor" class="size-4">
                             <path fill-rule="evenodd" d="M8 1.75a.75.75 0 0 1 .692.462l1.41 3.393 3.664.293a.75.75 0 0 1 .428 1.317l-2.791 2.39.853 3.575a.75.75 0 0 1-1.12.814L7.998 12.08l-3.135 1.915a.75.75 0 0 1-1.12-.814l.852-3.574-2.79-2.39a.75.75 0 0 1 .427-1.318l3.663-.293 1.41-3.393A.75.75 0 0 1 8 1.75Z" clip-rule="evenodd" />
                         </svg>
