--- a/templates/route/index.html.twig
+++ b/templates/route/index.html.twig
@@ -216,13 +216,13 @@
                             <circle r="1" cx="1" cy="1" />
                         </svg>
                         <p><time :datetime="route['created_at'].toISOString()" x-text="route['created_at'].toDateString()"></time></p>
-                        <div class="flex items-center gap-x-2" x-show="accRatings.hasOwnProperty(route['id']) && accRatings[route['id']].hasOwnProperty(angle)" x-cloak>
+                        <div class="flex items-center gap-x-2" x-show="getRouteRating(route['id']) != -1" x-cloak>
                             <svg viewBox="0 0 2 2" class="size-0.5 fill-current">
                                 <circle r="1" cx="1" cy="1" />
                             </svg>
                             <div class="flex items-center">
                                 <template x-for="i in 5">
-                                    <span :class="{'text-yellow-400': accRatings[route['id']][angle] >= i ,'text-gray-500 dark:text-gray-400': accRatings[route['id']][angle] < i}">
+                                    <span :class="{'text-yellow-400': Math.round(accRatings[route['id']][angle]) >= i ,'text-gray-500 dark:text-gray-400': Math.round(accRatings[route['id']][angle]) < i}">
                                         <svg viewBox="0 0 16 16" fill="currentColor" class="size-4">
                                             <path fill-rule="evenodd" d="M8 1.75a.75.75 0 0 1 .692.462l1.41 3.393 3.664.293a.75.75 0 0 1 .428 1.317l-2.791 2.39.853 3.575a.75.75 0 0 1-1.12.814L7.998 12.08l-3.135 1.915a.75.75 0 0 1-1.12-.814l.852-3.574-2.79-2.39a.75.75 0 0 1 .427-1.318l3.663-.293 1.41-3.393A.75.75 0 0 1 8 1.75Z" clip-rule="evenodd" />
                                         </svg>
