create log controller

--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -18,7 +18,7 @@
 {% include 'button/bulb.html.twig' %}
 {% include 'button/mirror.html.twig' %}
 {% if app.user %}
-<button type="button" @click="location.href='{{ path('route_log', {id: route_entity.id}) }}'" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
+<button type="button" @click="location.href='{{ path('log_new', {id: route_entity.id}) }}'" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Log</span>
     <svg  fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
