move new log template and add isSuccess to log entity

--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -138,16 +138,22 @@
                     {% endif %}
                     <div class="relative flex space-x-3">
                     <div>
-                        <span class="flex size-8 items-center justify-center rounded-full bg-green-500 ring-8 ring-gray-100 dark:ring-gray-900">
+                        <span class="flex size-8 items-center justify-center rounded-full ring-8 ring-gray-100 dark:ring-gray-900 {{ entry.isSuccess ? 'bg-green-500' : 'bg-red-500'}}">
+                            {% if entry.isSuccess %}
                             <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 text-white">
                                 <path d="M16.704 4.153a.75.75 0 0 1 .143 1.052l-8 10.5a.75.75 0 0 1-1.127.075l-4.5-4.5a.75.75 0 0 1 1.06-1.06l3.894 3.893 7.48-9.817a.75.75 0 0 1 1.05-.143Z" clip-rule="evenodd" fill-rule="evenodd" />
                             </svg>
+                            {% else %}
+                            <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5 text-white">
+                                <path d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z" />
+                            </svg>
+                            {% endif %}
                         </span>
                     </div>
                     <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
                         <div>
                             <p class="text-sm text-gray-500 dark:text-gray-400">
-                                <span class="font-medium text-gray-900 dark:text-white">{{ entry.user.userIdentifier }}</span> sent
+                                <span class="font-medium text-gray-900 dark:text-white">{{ entry.user.userIdentifier }}</span>{{ entry.isSuccess ? '' : ' tried to' }} sent
                                 <span class="font-medium text-gray-900 dark:text-white">{{ route_entity.name }}</span>
                                 {% if entry.angle %}
                                     @ <span class="font-medium text-gray-900 dark:text-white">{{ entry.angle }}°</span>
