--- a/templates/button/edit.html.twig
+++ b/templates/button/edit.html.twig
@@ -1,7 +1,7 @@
 {# https://tailwindcss.com/plus/ui-blocks/application-ui/elements/dropdowns#component-e4319217bff2762964fc89eb3382f911 #}
 {% if app.user %}
 <el-dropdown class="inline-block">
-    <button type="button" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
+    <button type="button" class="relative rounded-full p-1 text-fuchsia-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
         <span class="absolute -inset-1.5"></span>
         <span class="sr-only">Edit Route</span>
         <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
