--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,12 +20,12 @@
         <div class="min-h-full">
             {% set route = app.request.attributes.get('_route') %}
             {% set navigation_entries = [{'route': 'index', 'label': 'Dashboard', 'userRequired': false}, {'route': 'route', 'label': 'Routes', 'userRequired': false}, {'route': 'log', 'label': 'Logs', 'userRequired': true}, {'route': 'setting' ,'label': 'Settings', 'userRequired': true}] %}
-            <nav class="bg-emerald-600 dark:bg-emerald-800" x-data="{ open: false }">
+            <nav class="bg-fuchsia-600 dark:bg-fuchsia-800" x-data="{ open: false }">
                 <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
                     <div class="relative flex h-16 items-center justify-between">
                         <div class="absolute inset-y-0 left-0 flex items-center md:hidden">
                             {% block navigation_button %}
-                                <button type="button" command="--toggle" commandfor="mobile-menu" class="relative inline-flex items-center justify-center rounded-md bg-emerald-600 p-2 text-emerald-200 hover:bg-emerald-500/75 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white dark:bg-emerald-800 dark:hover:bg-emerald-700/75">
+                                <button type="button" command="--toggle" commandfor="mobile-menu" class="relative inline-flex items-center justify-center rounded-md bg-fuchsia-600 p-2 text-fuchsia-200 hover:bg-fuchsia-500/75 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white dark:bg-fuchsia-800 dark:hover:bg-fuchsia-700/75">
                                     <span class="absolute -inset-0.5"></span>
                                     <span class="sr-only">Open main menu</span>
                                     <svg x-description="Icon when menu is closed." x-state:on="Menu open" x-state:off="Menu closed" class="size-6 block" :class="{ 'hidden': open, 'block': !(open) }" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" data-slot="icon" aria-hidden="true" class="size-6 in-aria-expanded:hidden">
@@ -43,9 +43,9 @@
                                     {% for entry in navigation_entries %}
                                         {% if entry.userRequired == false or app.user %}
                                             {% if route starts with entry.route %}
-                                                <a href="{{ path(entry.route) }}" aria-current="page" class="rounded-md bg-emerald-700 px-3 py-2 text-sm font-medium text-white dark:bg-emerald-950/40">{{ entry.label }}</a>
+                                                <a href="{{ path(entry.route) }}" aria-current="page" class="rounded-md bg-fuchsia-700 px-3 py-2 text-sm font-medium text-white dark:bg-fuchsia-950/40">{{ entry.label }}</a>
                                             {% else %}
-                                                <a href="{{ path(entry.route) }}" class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">{{ entry.label }}</a>
+                                                <a href="{{ path(entry.route) }}" class="rounded-md px-3 py-2 text-sm font-medium text-white hover:bg-fuchsia-500/75 dark:hover:bg-fuchsia-700/75">{{ entry.label }}</a>
                                             {% endif %}
                                         {% endif %}
                                     {% endfor %}
@@ -69,7 +69,7 @@
                                         </el-menu>
                                     </el-dropdown>
                                 {% else %}
-                                    <button type="button" @click="location.href='{{ path('app_login') }}'" class="hidden relative md:inline-flex items-center justify-center rounded-md bg-emerald-600 p-2 text-emerald-200 hover:bg-emerald-500/75 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white dark:bg-emerald-800 dark:hover:bg-emerald-700/75">
+                                    <button type="button" @click="location.href='{{ path('app_login') }}'" class="hidden relative md:inline-flex items-center justify-center rounded-md bg-fuchsia-600 p-2 text-fuchsia-200 hover:bg-fuchsia-500/75 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white dark:bg-fuchsia-800 dark:hover:bg-fuchsia-700/75">
                                         <span class="absolute -inset-0.5"></span>
                                         <span class="sr-only">Login</span>
                                         <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
@@ -86,14 +86,14 @@
                         {% for entry in navigation_entries %}
                             {% if entry.userRequired == false or app.user %}
                                 {% if route starts with entry.route %}
-                                    <a href="{{ path(entry.route) }}" aria-current="page" class="block rounded-md bg-emerald-700 px-3 py-2 text-base font-medium text-white dark:bg-emerald-950/40">{{ entry.label }}</a>
+                                    <a href="{{ path(entry.route) }}" aria-current="page" class="block rounded-md bg-fuchsia-700 px-3 py-2 text-base font-medium text-white dark:bg-fuchsia-950/40">{{ entry.label }}</a>
                                 {% else %}
-                                    <a href="{{ path(entry.route) }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">{{ entry.label }}</a>
+                                    <a href="{{ path(entry.route) }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-fuchsia-500/75 dark:hover:bg-fuchsia-700/75">{{ entry.label }}</a>
                                 {% endif %}
                             {% endif %}
                         {% endfor %}
                     </div>
-                    <div class="border-t border-emerald-700 pt-4 pb-3 dark:border-emerald-800">
+                    <div class="border-t border-fuchsia-700 pt-4 pb-3 dark:border-fuchsia-800">
                         {% if app.user %}
                             <div class="flex items-center px-5">
                                 <div class="shrink-0">
@@ -106,11 +106,11 @@
                                 </div>
                             </div>
                             <div class="mt-3 space-y-1 px-2">
-                                <a href="{{ path('app_logout') }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">Sign out</a>
+                                <a href="{{ path('app_logout') }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-fuchsia-500/75 dark:hover:bg-fuchsia-700/75">Sign out</a>
                             </div>
                         {% else %}
                             <div class="space-y-1 px-2">
-                                <a href="{{ path('app_login') }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-emerald-500/75 dark:hover:bg-emerald-700/75">Login</a>
+                                <a href="{{ path('app_login') }}" class="block rounded-md px-3 py-2 text-base font-medium text-white hover:bg-fuchsia-500/75 dark:hover:bg-fuchsia-700/75">Login</a>
                             </div>
                         {% endif %}
                     </div>
