--- a/templates/component/flash.html.twig
+++ b/templates/component/flash.html.twig
@@ -50,7 +50,7 @@
                         <p class="text-sm font-medium text-gray-900 dark:text-white" x-text="currentMessageText"></p>
                     </div>
                     <div class="ml-4 flex shrink-0">
-                        <button @click="loadNextMessage" type="button" class="inline-flex rounded-md text-gray-400 hover:text-gray-500 focus:outline-2 focus:outline-offset-2 focus:outline-emerald-600 dark:hover:text-white dark:focus:outline-emerald-500">
+                        <button @click="loadNextMessage" type="button" class="inline-flex rounded-md text-gray-400 hover:text-gray-500 focus:outline-2 focus:outline-offset-2 focus:outline-fuchsia-600 dark:hover:text-white dark:focus:outline-fuchsia-500">
                         <span class="sr-only">Close</span>
                         <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true" class="size-5">
                             <path d="M6.28 5.22a.75.75 0 0 0-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 1 0 1.06 1.06L10 11.06l3.72 3.72a.75.75 0 1 0 1.06-1.06L11.06 10l3.72-3.72a.75.75 0 0 0-1.06-1.06L10 8.94 6.28 5.22Z" />
