--- a/templates/route/index.html.twig
+++ b/templates/route/index.html.twig
@@ -5,7 +5,7 @@
 {% block navigation_buttons %}
 {% include 'button/angle.html.twig' %}
 {% if app.user %}
-<button @click="location.href='{{ path('route_new') }}'" class="relative rounded-full p-1 text-emerald-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
+<button @click="location.href='{{ path('route_new') }}'" class="relative rounded-full p-1 text-fuchsia-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Add Route</span>
     <svg fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
