--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -13,21 +13,21 @@
             <div class="bg-white px-6 py-12 shadow-sm sm:rounded-lg sm:px-12 dark:bg-gray-800/50 dark:shadow-none dark:outline dark:-outline-offset-1 dark:outline-white/10">
                 {% if app.user %}
                     <div>
-                        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}" class="font-semibold text-emerald-600 hover:text-emerald-500 dark:text-emerald-400 dark:hover:text-emerald-300">Logout</a>
+                        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}" class="font-semibold text-fuchsia-600 hover:text-fuchsia-500 dark:text-fuchsia-400 dark:hover:text-fuchsia-300">Logout</a>
                     </div>
                 {% else %}
                     <form method="post" class="space-y-6">
                         <div>
                             <label for="username" class="block text-sm/6 font-medium text-gray-900 dark:text-white">Username</label>
                             <div class="mt-2">
-                                <input id="username" type="text" value="{{ last_username }}" name="_username" required autocomplete="username" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-emerald-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:placeholder:text-gray-500 dark:focus:outline-emerald-500" />
+                                <input id="username" type="text" value="{{ last_username }}" name="_username" required autocomplete="username" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-fuchsia-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:placeholder:text-gray-500 dark:focus:outline-fuchsia-500" />
                             </div>
                         </div>
 
                         <div>
                             <label for="password" class="block text-sm/6 font-medium text-gray-900 dark:text-white">Password</label>
                             <div class="mt-2">
-                                <input id="password" type="password" name="_password" required autocomplete="current-password" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-emerald-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:placeholder:text-gray-500 dark:focus:outline-emerald-500" />
+                                <input id="password" type="password" name="_password" required autocomplete="current-password" class="block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline-2 focus:-outline-offset-2 focus:outline-fuchsia-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:placeholder:text-gray-500 dark:focus:outline-fuchsia-500" />
                             </div>
                         </div>
 
@@ -37,7 +37,7 @@
                             <div class="flex gap-3">
                                 <div class="flex h-6 shrink-0 items-center">
                                 <div class="group grid size-4 grid-cols-1">
-                                    <input id="remember-me" type="checkbox" name="_remember_me" class="col-start-1 row-start-1 appearance-none rounded-sm border border-gray-300 bg-white checked:border-emerald-600 checked:bg-emerald-600 indeterminate:border-emerald-600 indeterminate:bg-emerald-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-emerald-600 disabled:border-gray-300 disabled:bg-gray-100 disabled:checked:bg-gray-100 dark:border-white/10 dark:bg-white/5 dark:checked:border-emerald-500 dark:checked:bg-emerald-500 dark:indeterminate:border-emerald-500 dark:indeterminate:bg-emerald-500 dark:focus-visible:outline-emerald-500 forced-colors:appearance-auto" />
+                                    <input id="remember-me" type="checkbox" name="_remember_me" class="col-start-1 row-start-1 appearance-none rounded-sm border border-gray-300 bg-white checked:border-fuchsia-600 checked:bg-fuchsia-600 indeterminate:border-fuchsia-600 indeterminate:bg-fuchsia-600 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-fuchsia-600 disabled:border-gray-300 disabled:bg-gray-100 disabled:checked:bg-gray-100 dark:border-white/10 dark:bg-white/5 dark:checked:border-fuchsia-500 dark:checked:bg-fuchsia-500 dark:indeterminate:border-fuchsia-500 dark:indeterminate:bg-fuchsia-500 dark:focus-visible:outline-fuchsia-500 forced-colors:appearance-auto" />
                                     <svg viewBox="0 0 14 14" fill="none" class="pointer-events-none col-start-1 row-start-1 size-3.5 self-center justify-self-center stroke-white group-has-disabled:stroke-gray-950/25 dark:group-has-disabled:stroke-white/25">
                                         <path d="M3 8L6 11L11 3.5" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-checked:opacity-100" />
                                         <path d="M3 7H11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="opacity-0 group-has-indeterminate:opacity-100" />
@@ -49,7 +49,7 @@
                         </div>
 
                         <div>
-                            <button type="submit" class="flex w-full justify-center rounded-md bg-emerald-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-emerald-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-emerald-600 dark:bg-emerald-500 dark:shadow-none dark:hover:bg-emerald-400 dark:focus-visible:outline-emerald-500">Sign in</button>
+                            <button type="submit" class="flex w-full justify-center rounded-md bg-fuchsia-600 px-3 py-1.5 text-sm/6 font-semibold text-white shadow-xs hover:bg-fuchsia-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-fuchsia-600 dark:bg-fuchsia-500 dark:shadow-none dark:hover:bg-fuchsia-400 dark:focus-visible:outline-fuchsia-500">Sign in</button>
                         </div>
                     </form>
                 {% endif %}
