change theme color to fuchsia

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="theme-color" content="#00bc7d">
+        <meta name="theme-color" content="#e12afb">
         <link rel="icon" href="data:image/png;base64,iVBORw0KGgo=">
         <title>{% block title %}owoody{% endblock %}</title>
         {% block stylesheets %}
