grow log description

--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -151,7 +151,7 @@
                             </span>
                         </div>
                         <div class="flex min-w-0 flex-1 justify-between space-x-4 pt-1.5">
-                            <div>
+                            <div class="grow">
                                 <p class="text-sm text-gray-500 dark:text-gray-400">
                                     <span class="font-medium text-gray-900 dark:text-white">{{ entry.user.userIdentifier }}</span>{{ entry.isSuccess ? '' : ' tried to' }} sent
                                     <span class="font-medium text-gray-900 dark:text-white">{{ route_entity.name }}</span>
