--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -123,7 +123,7 @@
                 </div>
             </header>
             <main>
-                <div class="mx-auto max-w-7xl px-4 py-6 sm:px-6 lg:px-8">
+                <div class="mx-auto max-w-7xl py-3 sm:py-6 sm:px-6 lg:px-8">
                     {% block main %}{% endblock %}
                 </div>
                 {% include 'component/flash.html.twig' %}
