change background of avatar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,7 +59,7 @@
                                         <button class="relative flex max-w-xs items-center rounded-full focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-white">
                                             <span class="absolute -inset-1.5"></span>
                                             <span class="sr-only">Open user menu</span>
-                                            <span class="inline-flex size-8 items-center justify-center rounded-full bg-gray-500 outline -outline-offset-1 outline-black/5 dark:bg-gray-800 dark:outline-white/10">
+                                            <span class="inline-flex size-8 items-center justify-center rounded-full bg-fuchsia-700 outline -outline-offset-1 outline-black/5 dark:bg-fuchsia-950/40 dark:outline-white/10">
                                                 <span class="text-sm font-medium text-white uppercase">{{ app.user.userIdentifier|slice(0, 1) }}</span>
                                             </span>
                                         </button>
@@ -97,7 +97,7 @@
                         {% if app.user %}
                             <div class="flex items-center px-5">
                                 <div class="shrink-0">
-                                    <span class="inline-flex size-8 items-center justify-center rounded-full bg-gray-500 outline -outline-offset-1 outline-black/5 dark:bg-gray-800 dark:outline-white/10">
+                                    <span class="inline-flex size-8 items-center justify-center rounded-full bg-fuchsia-700 outline -outline-offset-1 outline-black/5 dark:bg-fuchsia-950/40 dark:outline-white/10">
                                         <span class="text-sm font-medium text-white uppercase">{{ app.user.userIdentifier|slice(0, 1) }}</span>
                                     </span>
                                 </div>
