make angle disabled on new logs

--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -18,7 +18,27 @@
 {% include 'button/bulb.html.twig' %}
 {% include 'button/mirror.html.twig' %}
 {% if app.user %}
-<button type="button" @click="location.href='{{ path('log_new', {id: route_entity.id}) }}'" class="relative rounded-full p-1 text-fuchsia-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
+<script>
+    function initLogButton()
+    {
+        return {
+            angle: Alpine.$persist(0),
+            observeAngle(event) {
+                this.angle = event.detail;
+            },
+            angleLinks: {},
+            init() {
+                {% for i in 0..8 %}
+                    this.angleLinks[{{ i * 5 }}] = "{{ path('log_new', {id: route_entity.id, angle: i * 5}) }}";
+                {% endfor %}
+            },
+            log() {
+                location.href = this.angleLinks[this.angle];
+            }
+        };
+    }
+</script>
+<button x-data="initLogButton" @angle.window="observeAngle" type="button" @click="log" class="relative rounded-full p-1 text-fuchsia-200 hover:text-white focus:outline-2 focus:outline-offset-2 focus:outline-white">
     <span class="absolute -inset-1.5"></span>
     <span class="sr-only">Log</span>
     <svg  fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
