show attempts on dashboard

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -10,8 +10,12 @@
       <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ route_count }}</dd>
     </div>
     <div class="grow overflow-hidden sm:rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
-      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Accents</dt>
-      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ log_count }}</dd>
+      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Attempts</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ attempt_count }}</dd>
+    </div>
+    <div class="grow overflow-hidden sm:rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
+      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Sends</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ send_count }}</dd>
     </div>
     <div class="grow overflow-hidden sm:rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
       <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Easist</dt>
