--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block navigation_title %}Log in{% endblock %}
 
 {% block main %}
     {# https://tailwindcss.com/plus/ui-blocks/application-ui/forms/sign-in-forms#component-bc08eb211afa45fad7c9f89c1891f284 #}
