--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -198,7 +198,7 @@
                                         <p class="text-sm text-gray-500 dark:text-gray-400">
                                             <span class="font-medium text-gray-900 dark:text-white">{{ entry.user.userIdentifier }}</span>{{ entry.isSuccess ? '' : ' tried to' }} sent
                                             <span class="font-medium text-gray-900 dark:text-white">{{ route_entity.name }}</span>
-                                            {% if entry.angle %}
+                                            {% if entry.angle is defined %}
                                                 @ <span class="font-medium text-gray-900 dark:text-white">{{ entry.angle }}°</span>
                                             {% endif %}
                                             with <span class="font-medium text-gray-900 dark:text-white">{{ entry.attempts }}</span>
@@ -224,7 +224,12 @@
                                                     </span>
                                                 {% endfor %}
                                             </div>
-                                        </div>                            
+                                        </div>
+                                        {% if entry.note %}
+                                            <div class="mt-2 text-sm text-gray-700 dark:text-gray-200">
+                                                <p>{{ entry.note }}</p>
+                                            </div>
+                                        {% endif %}
                                     </div>
                                     <div class="text-right text-sm whitespace-nowrap text-gray-500 dark:text-gray-400">
                                         <time datetime="{{ entry.createdAt|date }}">{{ entry.createdAt|date("D M d o") }}</time>
